@@ -1,3 +1,9 @@
+TAG: nomenload-6-0-26-1
+DATE: 07/21/2025
+STAFF: lec
+wts2-1704/e4g-317/add sanity check to nomenload/barchdelete
+        modified:   bin/batchdelete.py
+
 TAG: nomenload-6-0-25-3
 TAG: nomenload-6-0-25-2
 DATE: 05/01/2025
